--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10767,4 +10767,14 @@
 	<item component="ComponentInfo{com.dogusumit.ortatus/com.dogusumit.ortatus.MainActivity}" drawable="soft_keys" />
 	<item component="ComponentInfo{com.taskrabbit.droid.consumer/com.taskrabbit.droid.consumer.MainActivity}" drawable="taskrabbit" />
 	<item component="ComponentInfo{com.nikon.wu.wmau/com.nikon.wu.wmau.NccLicenseActivity}" drawable="wireless_mobile_utility" />
+	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivity}" drawable="aosp_mods" />
+	<item component="ComponentInfo{com.bt.btsport/com.bt.tve.otg.StartupActivity}" drawable="bt_sport" />
+	<item component="ComponentInfo{com.campfiremobile/com.campfiremobile.MainActivity}" drawable="campfire" />
+	<item component="ComponentInfo{es.correos.widget/es.correos.widget.presentation.BaseActivity}" drawable="correos" />
+	<item component="ComponentInfo{com.dailyyoga.inc/com.dailyyoga.inc.LoadingActivity}" drawable="daily_yoga" />
+	<item component="ComponentInfo{pl.gadugadu/pl.gadugadu.contactslist.ContactListActivity}" drawable="gg_messenger" />
+	<item component="ComponentInfo{com.alhiwar/com.alhiwar.main.MainActivity}" drawable="muslim_muna" />
+	<item component="ComponentInfo{com.schnucks.android.customer/com.schnucks.android.customer.MainActivity}" drawable="schnucks_rewards" />
+	<item component="ComponentInfo{com.protostar.sling/com.prime31.UnityPlayerNativeActivity}" drawable="sling_kong" />
+	<item component="ComponentInfo{jp.zozo.android.town/jp.starttoday.zozo.zozotown.main.presentation.screen.main.MainActivity}" drawable="zozo_town" />
 </resources>
