--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -501,6 +501,16 @@
 	<item drawable="soft_keys" />
 	<item drawable="taskrabbit" />
 	<item drawable="wireless_mobile_utility" />
+	<item drawable="aosp_mods" />
+	<item drawable="bt_sport" />
+	<item drawable="campfire" />
+	<item drawable="correos" />
+	<item drawable="daily_yoga" />
+	<item drawable="gg_messenger" />
+	<item drawable="muslim_muna" />
+	<item drawable="schnucks_rewards" />
+	<item drawable="sling_kong" />
+	<item drawable="zozo_town" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2242,6 +2252,7 @@
 	<item drawable="anywhere" />
 	<item drawable="aol" />
 	<item drawable="aora" />
+	<item drawable="aosp_mods" />
 	<item drawable="ap_mobile" />
 	<item drawable="apex_launcher" />
 	<item drawable="apex_legends" />
@@ -2747,6 +2758,7 @@
 	<item drawable="brubank" />
 	<item drawable="bspb" />
 	<item drawable="bt_pay" />
+	<item drawable="bt_sport" />
 	<item drawable="btc_map" />
 	<item drawable="btg" />
 	<item drawable="btwb" />
@@ -2820,6 +2832,7 @@
 	<item drawable="camera_retro" />
 	<item drawable="camera_roll" />
 	<item drawable="camera360" />
+	<item drawable="campfire" />
 	<item drawable="campus_student" />
 	<item drawable="canabalt_hd" />
 	<item drawable="canada_post" />
@@ -3085,6 +3098,7 @@
 	<item drawable="coronastatsde" />
 	<item drawable="coronawarn" />
 	<item drawable="correios" />
+	<item drawable="correos" />
 	<item drawable="corridor" />
 	<item drawable="cortana" />
 	<item drawable="costco" />
@@ -3177,6 +3191,7 @@
 	<item drawable="daijisho" />
 	<item drawable="daily_note" />
 	<item drawable="daily_schedule" />
+	<item drawable="daily_yoga" />
 	<item drawable="dailyart" />
 	<item drawable="dailybean" />
 	<item drawable="dailymotion" />
@@ -3959,6 +3974,7 @@
 	<item drawable="gett" />
 	<item drawable="getting_over_it" />
 	<item drawable="getyourguide" />
+	<item drawable="gg_messenger" />
 	<item drawable="gif_live_wallpaper" />
 	<item drawable="giffgaff" />
 	<item drawable="gigalife" />
@@ -5243,6 +5259,7 @@
 	<item drawable="musicpiped" />
 	<item drawable="musify" />
 	<item drawable="musixmatch" />
+	<item drawable="muslim_muna" />
 	<item drawable="muslim_pro" />
 	<item drawable="must" />
 	<item drawable="mutua_madrilenya" />
@@ -6508,6 +6525,7 @@
 	<item drawable="schalke" />
 	<item drawable="scheduler" />
 	<item drawable="schildichat" />
+	<item drawable="schnucks_rewards" />
 	<item drawable="school_loop" />
 	<item drawable="school_planner" />
 	<item drawable="schoolboy" />
@@ -6719,6 +6737,7 @@
 	<item drawable="slide" />
 	<item drawable="slide_fitness" />
 	<item drawable="slidebox" />
+	<item drawable="sling_kong" />
 	<item drawable="slither_io" />
 	<item drawable="slowly" />
 	<item drawable="smalltalk" />
@@ -8020,6 +8039,7 @@
 	<item drawable="zorin_connect" />
 	<item drawable="zowi" />
 	<item drawable="zoysii" />
+	<item drawable="zozo_town" />
 	<item drawable="zulip" />
 	<item drawable="zwart" />
 	<item drawable="zwift" />
