--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -511,6 +511,16 @@
 	<item drawable="schnucks_rewards" />
 	<item drawable="sling_kong" />
 	<item drawable="zozo_town" />
+	<item drawable="blue_yonder_workforce" />
+	<item drawable="epson_iprojection" />
+	<item drawable="forex_com" />
+	<item drawable="goat" />
+	<item drawable="larnu" />
+	<item drawable="learn_japanese" />
+	<item drawable="mtg_scanner" />
+	<item drawable="shell" />
+	<item drawable="stationhead" />
+	<item drawable="timo_digital_bank" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2674,6 +2684,7 @@
 	<item drawable="blue_archive" />
 	<item drawable="blue_light_filter" />
 	<item drawable="blue_line_console" />
+	<item drawable="blue_yonder_workforce" />
 	<item drawable="bluebubbles" />
 	<item drawable="bluecoins" />
 	<item drawable="bluecord" />
@@ -3556,6 +3567,7 @@
 	<item drawable="epic_games" />
 	<item drawable="epic_seven" />
 	<item drawable="epik" />
+	<item drawable="epson_iprojection" />
 	<item drawable="epsxe" />
 	<item drawable="eqfy_equalizer" />
 	<item drawable="ereader_prestigio" />
@@ -3819,6 +3831,7 @@
 	<item drawable="forecaster" />
 	<item drawable="forecastie" />
 	<item drawable="forest" />
+	<item drawable="forex_com" />
 	<item drawable="forge_of_neon" />
 	<item drawable="forkgram" />
 	<item drawable="forkyz" />
@@ -4004,6 +4017,7 @@
 	<item drawable="gnucash" />
 	<item drawable="go_keyboard" />
 	<item drawable="go_launcher" />
+	<item drawable="goat" />
 	<item drawable="gobiz" />
 	<item drawable="godville" />
 	<item drawable="gojek" />
@@ -4636,6 +4650,7 @@
 	<item drawable="lapa" />
 	<item drawable="lapse" />
 	<item drawable="lark_player" />
+	<item drawable="larnu" />
 	<item drawable="last__pass" />
 	<item drawable="last__pass_authenticator" />
 	<item drawable="last_day_on_earth_survival" />
@@ -4655,6 +4670,7 @@
 	<item drawable="leafly" />
 	<item drawable="league_plus" />
 	<item drawable="learn_anywhere" />
+	<item drawable="learn_japanese" />
 	<item drawable="learn_python" />
 	<item drawable="learn_python_x" />
 	<item drawable="learnneo" />
@@ -5237,6 +5253,7 @@
 	<item drawable="msqrd" />
 	<item drawable="mtg_arena" />
 	<item drawable="mtg_familiar" />
+	<item drawable="mtg_scanner" />
 	<item drawable="mthermo" />
 	<item drawable="mubert" />
 	<item drawable="mubi" />
@@ -6613,6 +6630,7 @@
 	<item drawable="sheetz" />
 	<item drawable="shein" />
 	<item drawable="shelf" />
+	<item drawable="shell" />
 	<item drawable="shell_terminal" />
 	<item drawable="shelter" />
 	<item drawable="shift_tracker" />
@@ -6908,6 +6926,7 @@
 	<item drawable="stash" />
 	<item drawable="stashaway" />
 	<item drawable="state_farm" />
+	<item drawable="stationhead" />
 	<item drawable="statping" />
 	<item drawable="stats_royale" />
 	<item drawable="status" />
@@ -7232,6 +7251,7 @@
 	<item drawable="timer_machine" />
 	<item drawable="timetac" />
 	<item drawable="timetree" />
+	<item drawable="timo_digital_bank" />
 	<item drawable="timus" />
 	<item drawable="timus_circle" />
 	<item drawable="tinc_app" />
