--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10777,4 +10777,14 @@
 	<item component="ComponentInfo{com.schnucks.android.customer/com.schnucks.android.customer.MainActivity}" drawable="schnucks_rewards" />
 	<item component="ComponentInfo{com.protostar.sling/com.prime31.UnityPlayerNativeActivity}" drawable="sling_kong" />
 	<item component="ComponentInfo{jp.zozo.android.town/jp.starttoday.zozo.zozotown.main.presentation.screen.main.MainActivity}" drawable="zozo_town" />
+	<item component="ComponentInfo{com.jda.mobility.wfmr/crc6419cfb3bcede2de6a.MainActivity}" drawable="blue_yonder_workforce" />
+	<item component="ComponentInfo{com.epson.iprojection/com.epson.iprojection.ui.activities.start.Activity_StartSplash}" drawable="epson_iprojection" />
+	<item component="ComponentInfo{com.gaincapital.forex/cityindex.mobile.droid.activities.SplashScreenActivity}" drawable="forex_com" />
+	<item component="ComponentInfo{com.airgoat.goat/com.airgoat.goat.splash.ui.SplashActivity}" drawable="goat" />
+	<item component="ComponentInfo{com.larnu/com.larnu.larnuapp.MainActivity}" drawable="larnu" />
+	<item component="ComponentInfo{com.breboucas.japonesparaviajar/com.breboucas.japonesparaviajar.menu.MainActivity}" drawable="learn_japanese" />
+	<item component="ComponentInfo{pt.tscg.mtgmanager/com.bigar.manager.ui.activity.SplashActivity}" drawable="mtg_scanner" />
+	<item component="ComponentInfo{com.shell.sitibv.retail/com.mobgen.fireblade.presentation.splash.SplashActivity}" drawable="shell" />
+	<item component="ComponentInfo{com.stationhead.app/com.stationhead.app.launch.LaunchActivity}" drawable="stationhead" />
+	<item component="ComponentInfo{io.lifestyle.plus/io.lifestyle.plus.login.TimoLoginActivity}" drawable="timo_digital_bank" />
 </resources>
