--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10787,4 +10787,15 @@
 	<item component="ComponentInfo{com.shell.sitibv.retail/com.mobgen.fireblade.presentation.splash.SplashActivity}" drawable="shell" />
 	<item component="ComponentInfo{com.stationhead.app/com.stationhead.app.launch.LaunchActivity}" drawable="stationhead" />
 	<item component="ComponentInfo{io.lifestyle.plus/io.lifestyle.plus.login.TimoLoginActivity}" drawable="timo_digital_bank" />
+	<item component="ComponentInfo{delivery.shipp.shippcliente/br.packk.ui.splash.view.SplashActivity}" drawable="americanas_delivery" />
+	<item component="ComponentInfo{com.superelement.pomodoro/com.superelement.project.LauncherActivity}" drawable="focus_to_do" />
+	<item component="ComponentInfo{com.tv.loklok/com.ironman.tiktik.MainActivity}" drawable="loklok" />
+	<item component="ComponentInfo{com.makenotetoself/com.makenotetoself.MainActivity}" drawable="note_to_self" />
+	<item component="ComponentInfo{de.hafas.android.rejseplanen/de.hafas.main.HafasApp}" drawable="rejseplanen" />
+	<item component="ComponentInfo{com.raimbekov.android.sajde/com.raimbekov.android.sajde.InitActivity}" drawable="sadja" />
+	<item component="ComponentInfo{com.smallcase.android/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="smallcase" />
+	<item component="ComponentInfo{com.app.smytten/com.app.smytten.ui.auth.PreLoginActivity}" drawable="smytten" />
+	<item component="ComponentInfo{com.stronglifts.app/com.stronglifts.app.ui.splash.SplashActivity}" drawable="stronglifts" />
+	<item component="ComponentInfo{com.tombayley.statusbar/com.tombayley.statusbar.app.ui.home.MainActivity}" drawable="super_status_bar" />
+
 </resources>
