--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -521,6 +521,16 @@
 	<item drawable="shell" />
 	<item drawable="stationhead" />
 	<item drawable="timo_digital_bank" />
+	<item drawable="americanas_delivery" />
+	<item drawable="focus_to_do" />
+	<item drawable="loklok" />
+	<item drawable="note_to_self" />
+	<item drawable="rejseplanen" />
+	<item drawable="sadja" />
+	<item drawable="smallcase" />
+	<item drawable="smytten" />
+	<item drawable="stronglifts" />
+	<item drawable="super_status_bar" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2167,6 +2177,7 @@
 	<item drawable="ameixa_monochrome" />
 	<item drawable="ameli" />
 	<item drawable="american_airlines" />
+	<item drawable="americanas_delivery" />
 	<item drawable="amex_mobile" />
 	<item drawable="amigo" />
 	<item drawable="amino" />
@@ -3813,6 +3824,7 @@
 	<item drawable="fng" />
 	<item drawable="foca" />
 	<item drawable="focus" />
+	<item drawable="focus_to_do" />
 	<item drawable="focusmeter" />
 	<item drawable="fokus" />
 	<item drawable="folder_sync" />
@@ -4811,6 +4823,7 @@
 	<item drawable="logo_maker" />
 	<item drawable="logra" />
 	<item drawable="logseq" />
+	<item drawable="loklok" />
 	<item drawable="lol_catalyst" />
 	<item drawable="lol_wild_rift_ultimate" />
 	<item drawable="london_bus_checker" />
@@ -5569,6 +5582,7 @@
 	<item drawable="nosurf_for_reddit" />
 	<item drawable="notally" />
 	<item drawable="note_everything" />
+	<item drawable="note_to_self" />
 	<item drawable="notebloc" />
 	<item drawable="notebook" />
 	<item drawable="noteit_widget" />
@@ -6326,6 +6340,7 @@
 	<item drawable="reicast" />
 	<item drawable="reigns" />
 	<item drawable="reigns_her_majesty" />
+	<item drawable="rejseplanen" />
 	<item drawable="relay" />
 	<item drawable="relive" />
 	<item drawable="remembear" />
@@ -6452,6 +6467,7 @@
 	<item drawable="saavn" />
 	<item drawable="saber" />
 	<item drawable="sadapay" />
+	<item drawable="sadja" />
 	<item drawable="safe__in__cloud" />
 	<item drawable="safe_security" />
 	<item drawable="sagon" />
@@ -6758,6 +6774,7 @@
 	<item drawable="sling_kong" />
 	<item drawable="slither_io" />
 	<item drawable="slowly" />
+	<item drawable="smallcase" />
 	<item drawable="smalltalk" />
 	<item drawable="smart_applock" />
 	<item drawable="smart_autoclicker" />
@@ -6783,6 +6800,7 @@
 	<item drawable="sms_import_export" />
 	<item drawable="sms_organizer" />
 	<item drawable="smule" />
+	<item drawable="smytten" />
 	<item drawable="snapchat" />
 	<item drawable="snapdeal" />
 	<item drawable="snapdrop" />
@@ -6973,6 +6991,7 @@
 	<item drawable="streetcomplete" />
 	<item drawable="stremio" />
 	<item drawable="strive_minutes" />
+	<item drawable="stronglifts" />
 	<item drawable="strongswan" />
 	<item drawable="struckd" />
 	<item drawable="student_beans" />
@@ -7026,6 +7045,7 @@
 	<item drawable="supersu" />
 	<item drawable="supertux" />
 	<item drawable="supertuxkart" />
+	<item drawable="super_status_bar" />
 	<item drawable="supr_daily" />
 	<item drawable="surfshark_vpn" />
 	<item drawable="surveymonkey" />
