--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10797,5 +10797,14 @@
 	<item component="ComponentInfo{com.app.smytten/com.app.smytten.ui.auth.PreLoginActivity}" drawable="smytten" />
 	<item component="ComponentInfo{com.stronglifts.app/com.stronglifts.app.ui.splash.SplashActivity}" drawable="stronglifts" />
 	<item component="ComponentInfo{com.tombayley.statusbar/com.tombayley.statusbar.app.ui.home.MainActivity}" drawable="super_status_bar" />
-
+	<item component="ComponentInfo{de.aboutyou.mobile.app/de.aboutyou.mobile.app.MainActivity}" drawable="about_you" />
+	<item component="ComponentInfo{br.com.ampli/br.com.ampli.splash.ui.SplashActivity}" drawable="ampli" />
+	<item component="ComponentInfo{com.app_mo.splayer/com.app_mo.splayer.ui.main.MainActivity}" drawable="asd_player" />
+	<item component="ComponentInfo{me.curiouscat.app/me.curiouscat.app.MainActivity}" drawable="curiouscat" />
+	<item component="ComponentInfo{com.eksiteknoloji.eksisozluk/com.eksiteknoloji.eksisozluk.ui.launcher.LauncherActivity}" drawable="eksi_sozluk" />
+	<item component="ComponentInfo{fr.snapp.fidme/fr.snapp.fidme.MainActivity}" drawable="fidme" />
+	<item component="ComponentInfo{com.gc.teammanager/com.gc.androdyssey.ui.home.MainActivity}" drawable="gamechanger" />
+	<item component="ComponentInfo{biz.codespark.xcalendarapp/crc64c040fa4b38b83970.MainActivity}" drawable="one_calendar" />
+	<item component="ComponentInfo{jp.dena.showroom/jp.dena.showroom.feature.launcher.LauncherActivity}" drawable="showroom" />
+	<item component="ComponentInfo{com.quarzo.fourinarow/com.quarzo.fourinarow.AndroidLauncher}" drawable="_4_in_a_row" />
 </resources>
