--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -531,6 +531,16 @@
 	<item drawable="smytten" />
 	<item drawable="stronglifts" />
 	<item drawable="super_status_bar" />
+	<item drawable="about_you" />
+	<item drawable="ampli" />
+	<item drawable="asd_player" />
+	<item drawable="curiouscat" />
+	<item drawable="eksi_sozluk" />
+	<item drawable="fidme" />
+	<item drawable="gamechanger" />
+	<item drawable="one_calendar" />
+	<item drawable="showroom" />
+	<item drawable="_4_in_a_row" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1890,6 +1900,7 @@
 	<item drawable="_3dlut_mobile" />
 	<item drawable="_3dmark" />
 	<item drawable="_4_equals_10" />
+	<item drawable="_4_in_a_row" />
 	<item drawable="_4pda" />
 	<item drawable="_4shared" />
 	<item drawable="_500_firepaper" />
@@ -1949,6 +1960,7 @@
 	<item drawable="abi_a_robots_tale" />
 	<item drawable="abn_amro" />
 	<item drawable="abonnements" />
+	<item drawable="about_you" />
 	<item drawable="abs_workout_belly_fat" />
 	<item drawable="abs_workout_six_pack" />
 	<item drawable="absher" />
@@ -2184,6 +2196,7 @@
 	<item drawable="amoledpix" />
 	<item drawable="among_us" />
 	<item drawable="ampere" />
+	<item drawable="ampli" />
 	<item drawable="amplifi" />
 	<item drawable="amplify" />
 	<item drawable="amtrak" />
@@ -2356,6 +2369,7 @@
 	<item drawable="arvest_go" />
 	<item drawable="asana" />
 	<item drawable="asap_launcher" />
+	<item drawable="asd_player" />
 	<item drawable="ask_fm" />
 	<item drawable="asphalt_2" />
 	<item drawable="asphalt_8" />
@@ -3184,6 +3198,7 @@
 	<item drawable="cups" />
 	<item drawable="curiosity" />
 	<item drawable="curiositystream" />
+	<item drawable="curiouscat" />
 	<item drawable="currencies" />
 	<item drawable="current" />
 	<item drawable="curryguideberlin" />
@@ -3537,6 +3552,7 @@
 	<item drawable="eggtimer" />
 	<item drawable="ehviewer" />
 	<item drawable="einkbro" />
+	<item drawable="eksi_sozluk" />
 	<item drawable="electrolux" />
 	<item drawable="electron" />
 	<item drawable="electronics" />
@@ -3717,6 +3733,7 @@
 	<item drawable="ffxiv_companion" />
 	<item drawable="fi_money" />
 	<item drawable="fidelity_investments" />
+	<item drawable="fidme" />
 	<item drawable="fido" />
 	<item drawable="fifa_companion" />
 	<item drawable="fifa_mobile" />
@@ -3947,6 +3964,7 @@
 	<item drawable="gaode_map" />
 	<item drawable="garanti_bbva" />
 	<item drawable="game_space" />
+	<item drawable="gamechanger" />
 	<item drawable="gamefly" />
 	<item drawable="gamepad_tester" />
 	<item drawable="gamestop" />
@@ -5697,6 +5715,7 @@
 	<item drawable="one__plus_zen_mode" />
 	<item drawable="one_plus_care" />
 	<item drawable="one_plus_plus" />
+	<item drawable="one_calendar" />
 	<item drawable="onecard" />
 	<item drawable="onefootball" />
 	<item drawable="onepiece_treasure_cruise" />
@@ -6663,6 +6682,7 @@
 	<item drawable="shosetsu" />
 	<item drawable="should_i_answer" />
 	<item drawable="showly" />
+	<item drawable="showroom" />
 	<item drawable="showtime" />
 	<item drawable="shpock" />
 	<item drawable="shudder" />
