--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10807,4 +10807,14 @@
 	<item component="ComponentInfo{biz.codespark.xcalendarapp/crc64c040fa4b38b83970.MainActivity}" drawable="one_calendar" />
 	<item component="ComponentInfo{jp.dena.showroom/jp.dena.showroom.feature.launcher.LauncherActivity}" drawable="showroom" />
 	<item component="ComponentInfo{com.quarzo.fourinarow/com.quarzo.fourinarow.AndroidLauncher}" drawable="_4_in_a_row" />
+	<item component="ComponentInfo{com.satya.antar/com.satya.antar.ui.onboarding.SplashActivity}" drawable="antar" />
+	<item component="ComponentInfo{net.battlescribe.mobile.rostereditor/net.battlescribe.mobile.rostereditor.OpenRosterActivity}" drawable="battlescribe" />
+	<item component="ComponentInfo{io.japp.blackscreen/io.japp.blackscreen.ui.MainActivity}" drawable="black_screen" />
+	<item component="ComponentInfo{partl.Diarium/crc64379322c6af5bbbbe.MainActivity}" drawable="diarium" />
+	<item component="ComponentInfo{com.fairtiq.android/com.fairtiq.androidkit.signup.StartupActivity}" drawable="fairtiq" />
+	<item component="ComponentInfo{com.collecto.megafon.collecto/com.collecto.megafon.collecto.MainActivity}" drawable="megafon_collecto" />
+	<item component="ComponentInfo{com.tonik.mobile/com.tonik.mobile.MainActivity}" drawable="tonik" />
+	<item component="ComponentInfo{com.vivint.vivintsky/com.vivint.vivintsky.ui.SplashActivity}" drawable="vivint" />
+	<item component="ComponentInfo{com.jimber.workit/com.jimber.workit.SplashActivity}" drawable="workit" />
+	<item component="ComponentInfo{kr.co.spotvnow.app/kr.co.spotvnow.app.IntroActivity}" drawable="spotv_now" />
 </resources>
