--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -541,6 +541,16 @@
 	<item drawable="one_calendar" />
 	<item drawable="showroom" />
 	<item drawable="_4_in_a_row" />
+	<item drawable="antar" />
+	<item drawable="battlescribe" />
+	<item drawable="black_screen" />
+	<item drawable="diarium" />
+	<item drawable="fairtiq" />
+	<item drawable="megafon_collecto" />
+	<item drawable="tonik" />
+	<item drawable="vivint" />
+	<item drawable="workit" />
+	<item drawable="spotv_now" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2267,6 +2277,7 @@
 	<item drawable="another_widget" />
 	<item drawable="anova" />
 	<item drawable="anslayer" />
+	<item drawable="antar" />
 	<item drawable="antennapod" />
 	<item drawable="anticovid" />
 	<item drawable="antimatter_dimensions" />
@@ -2550,6 +2561,7 @@
 	<item drawable="battlefield_companion" />
 	<item drawable="battlenet" />
 	<item drawable="battlenet_authenticator" />
+	<item drawable="battlescribe" />
 	<item drawable="bbb" />
 	<item drawable="bbc_i_player" />
 	<item drawable="bbc_iplayer_radio" />
@@ -2671,6 +2683,7 @@
 	<item drawable="bla__bla__car" />
 	<item drawable="black_and_white_camera" />
 	<item drawable="black_desert_mobile" />
+	<item drawable="black_screen" />
 	<item drawable="blackberry_device_search" />
 	<item drawable="blackberry_dtek" />
 	<item drawable="blackberry_hub" />
@@ -3350,6 +3363,7 @@
 	<item drawable="dhgate" />
 	<item drawable="dhl" />
 	<item drawable="diablo_immortal" />
+	<item drawable="diarium" />
 	<item drawable="diaro" />
 	<item drawable="diary" />
 	<item drawable="dice" />
@@ -3686,6 +3700,7 @@
 	<item drawable="fahrinfo" />
 	<item drawable="fahrlehrer24" />
 	<item drawable="fairemail" />
+	<item drawable="fairtiq" />
 	<item drawable="fakegps_free" />
 	<item drawable="falcon_pro" />
 	<item drawable="fallout_pip_boy" />
@@ -5004,6 +5019,7 @@
 	<item drawable="mega" />
 	<item drawable="mega_curioso" />
 	<item drawable="megafon" />
+	<item drawable="megafon_collecto" />
 	<item drawable="megalodon" />
 	<item drawable="megazeux" />
 	<item drawable="mein_htp" />
@@ -6928,6 +6944,7 @@
 	<item drawable="spotistats" />
 	<item drawable="spotmute" />
 	<item drawable="spotube" />
+	<item drawable="spotv_now" />
 	<item drawable="spreaker" />
 	<item drawable="spren" />
 	<item drawable="sprinti" />
@@ -7340,6 +7357,7 @@
 	<item drawable="tonal_energy" />
 	<item drawable="tone_sphere" />
 	<item drawable="tonies" />
+	<item drawable="tonik" />
 	<item drawable="tonkeeper" />
 	<item drawable="tonuino" />
 	<item drawable="toogoodtogo" />
@@ -7669,6 +7687,7 @@
 	<item drawable="vivaldi_snapshot" />
 	<item drawable="vivid" />
 	<item drawable="vivino" />
+	<item drawable="vivint" />
 	<item drawable="vivo_lock" />
 	<item drawable="vizio" />
 	<item drawable="vk_admin" />
@@ -7893,6 +7912,7 @@
 	<item drawable="workday" />
 	<item drawable="workdone" />
 	<item drawable="workflowy" />
+	<item drawable="workit" />
 	<item drawable="workout" />
 	<item drawable="world_of_goo" />
 	<item drawable="world_of_tanks" />
