--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10817,4 +10817,14 @@
 	<item component="ComponentInfo{com.vivint.vivintsky/com.vivint.vivintsky.ui.SplashActivity}" drawable="vivint" />
 	<item component="ComponentInfo{com.jimber.workit/com.jimber.workit.SplashActivity}" drawable="workit" />
 	<item component="ComponentInfo{kr.co.spotvnow.app/kr.co.spotvnow.app.IntroActivity}" drawable="spotv_now" />
+	<item component="ComponentInfo{com.genie.dimmer/com.genie.dimmer.MainActivity}" drawable="dimmer" />
+	<item component="ComponentInfo{com.lightx.storyz/com.lightx.activities.StoryzActivity}" drawable="live_photo_picture_animation" />
+	<item component="ComponentInfo{com.peakpocketstudios.lofiradio/com.peakpocketstudios.lofi.MainActivity}" drawable="lo_fi_hip_hop_radio" />
+	<item component="ComponentInfo{com.myhomeowork/com.myhomeowork.App}" drawable="myhomework" />
+	<item component="ComponentInfo{com.propel.ebenefits/com.propel.ebenefits.MainActivity}" drawable="providers" />
+	<item component="ComponentInfo{com.tcgplayer.tcgplayer/com.tcgplayer.tcgplayer.SplashActivity}" drawable="tcgplayer" />
+	<item component="ComponentInfo{se.ul.app/crc64f1705e16053f0986.SplashActivity}" drawable="ul" />
+	<item component="ComponentInfo{com.open.hotspot.vpn.free/com.open.hotspot.vpn.free.ui.activity.LauncherActivity}" drawable="ultimate_vpn" />
+	<item component="ComponentInfo{st.veezie/st.veezie.MainActivity}" drawable="veezie" />
+	<item component="ComponentInfo{com.wakeup.smartband/com.wakeup.smartband.MySplashActivity}" drawable="wearfit" />
 </resources>
