--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -551,6 +551,16 @@
 	<item drawable="vivint" />
 	<item drawable="workit" />
 	<item drawable="spotv_now" />
+	<item drawable="dimmer" />
+	<item drawable="live_photo_picture_animation" />
+	<item drawable="lo_fi_hip_hop_radio" />
+	<item drawable="myhomework" />
+	<item drawable="providers" />
+	<item drawable="tcgplayer" />
+	<item drawable="ul" />
+	<item drawable="ultimate_vpn" />
+	<item drawable="veezie" />
+	<item drawable="wearfit" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -3387,6 +3397,7 @@
 	<item drawable="digitox" />
 	<item drawable="diki" />
 	<item drawable="dimly" />
+	<item drawable="dimmer" />
 	<item drawable="dineout" />
 	<item drawable="diohub" />
 	<item drawable="dir" />
@@ -4835,6 +4846,7 @@
 	<item drawable="little_alchemy_2" />
 	<item drawable="little_inferno" />
 	<item drawable="little_red_book" />
+	<item drawable="live_photo_picture_animation" />
 	<item drawable="live_pyro_reactions" />
 	<item drawable="liveboot" />
 	<item drawable="livechart_me" />
@@ -4853,6 +4865,7 @@
 	<item drawable="lock_screen_widgets" />
 	<item drawable="locket_widget" />
 	<item drawable="lockscreen_widgets" />
+	<item drawable="lo_fi_hip_hop_radio" />
 	<item drawable="logo_maker" />
 	<item drawable="logra" />
 	<item drawable="logseq" />
@@ -5401,6 +5414,7 @@
 	<item drawable="mygovid" />
 	<item drawable="mygp" />
 	<item drawable="myhannover" />
+	<item drawable="myhomework" />
 	<item drawable="myim3" />
 	<item drawable="myjio" />
 	<item drawable="myki" />
@@ -6205,6 +6219,7 @@
 	<item drawable="proton_mail" />
 	<item drawable="proton_vpn" />
 	<item drawable="protonvideocompressor" />
+	<item drawable="providers" />
 	<item drawable="proxmox" />
 	<item drawable="psiphon" />
 	<item drawable="psplay" />
@@ -7190,6 +7205,7 @@
 	<item drawable="taxi_three_tens" />
 	<item drawable="taylors_mobile" />
 	<item drawable="taz" />
+	<item drawable="tcgplayer" />
 	<item drawable="tcl" />
 	<item drawable="tcl_e_ticket" />
 	<item drawable="td_ameritrade" />
@@ -7535,8 +7551,10 @@
 	<item drawable="ukg" />
 	<item drawable="uklon" />
 	<item drawable="ukraine_alarm" />
+	<item drawable="ul" />
 	<item drawable="ulta_beauty" />
 	<item drawable="ultimate_guitar" />
+	<item drawable="ultimate_vpn" />
 	<item drawable="ultra_vpn" />
 	<item drawable="uma_musume" />
 	<item drawable="umico" />
@@ -7621,6 +7639,7 @@
 	<item drawable="vector_pinball" />
 	<item drawable="vectorify_da_home" />
 	<item drawable="vectorman" />
+	<item drawable="veezie" />
 	<item drawable="veggie_garden_planner" />
 	<item drawable="velobike" />
 	<item drawable="velobike_multicity" />
@@ -7807,6 +7826,7 @@
 	<item drawable="wealthsimple" />
 	<item drawable="wealthsimple_cash" />
 	<item drawable="wealthsimple_trade" />
+	<item drawable="wearfit" />
 	<item drawable="weather_m8" />
 	<item drawable="weather_timeline" />
 	<item drawable="weather_underground" />
