--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10827,4 +10827,14 @@
 	<item component="ComponentInfo{com.open.hotspot.vpn.free/com.open.hotspot.vpn.free.ui.activity.LauncherActivity}" drawable="ultimate_vpn" />
 	<item component="ComponentInfo{st.veezie/st.veezie.MainActivity}" drawable="veezie" />
 	<item component="ComponentInfo{com.wakeup.smartband/com.wakeup.smartband.MySplashActivity}" drawable="wearfit" />
+	<item component="ComponentInfo{br.com.portaldocartao.cartaodisantinni/com.portaldocartao.MainActivity}" drawable="cartao_de_santinni" />
+	<item component="ComponentInfo{com.coffeemeetsbagel/com.coffeemeetsbagel.activities.ActivityLogin}" drawable="coffee_meets_bagel" />
+	<item component="ComponentInfo{com.jwaala.mobile.redwoodcuorg/com.jwaala.mobile.redwoodcuorg.MainActivity}" drawable="redwood_cu" />
+	<item component="ComponentInfo{ch.rega.Rega/ch.rega.MainActivity}" drawable="rega" />
+	<item component="ComponentInfo{chat.revolt.app.twa/chat.revolt.app.twa.LauncherActivity}" drawable="revolt" />
+	<item component="ComponentInfo{com.floor12apps.smartcity/com.floor12apps.smartcity.ui.MainActivity}" drawable="smart_micto" />
+	<item component="ComponentInfo{fun.tenthapp.ten_thousand_hours_10000/fun.tenthapp.ten_thousand_hours_10000.MainActivity}" drawable="tenthapp" />
+	<item component="ComponentInfo{com.etermax.preguntados.lite/com.etermax.preguntados.splash.presentation.SplashActivity}" drawable="trivia_crack" />
+	<item component="ComponentInfo{com.wecenergygroup.we/com.wec.weenergies.screens.landing.LandingActivity}" drawable="we_energies" />
+	<item component="ComponentInfo{com.workjam.workjam/com.workjam.workjam.features.auth.LoginUsernameActivity}" drawable="workjam" />
 </resources>
