--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -561,6 +561,16 @@
 	<item drawable="ultimate_vpn" />
 	<item drawable="veezie" />
 	<item drawable="wearfit" />
+	<item drawable="cartao_de_santinni" />
+	<item drawable="coffee_meets_bagel" />
+	<item drawable="redwood_cu" />
+	<item drawable="rega" />
+	<item drawable="revolt" />
+	<item drawable="smart_micto" />
+	<item drawable="tenthapp" />
+	<item drawable="trivia_crack" />
+	<item drawable="we_energies" />
+	<item drawable="workjam" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2924,6 +2934,7 @@
 	<item drawable="carris" />
 	<item drawable="carrot_weather" />
 	<item drawable="cartao_continente" />
+	<item drawable="cartao_de_santinni" />
 	<item drawable="cartiera_de_trabalho_digital" />
 	<item drawable="carteira_digital_de_transito" />
 	<item drawable="cartogram" />
@@ -3097,6 +3108,7 @@
 	<item drawable="codashop" />
 	<item drawable="codecademy_go" />
 	<item drawable="coffee" />
+	<item drawable="coffee_meets_bagel" />
 	<item drawable="coin" />
 	<item drawable="coin_by_zerodha" />
 	<item drawable="coin_master" />
@@ -6383,10 +6395,12 @@
 	<item drawable="redirection" />
 	<item drawable="redpapers" />
 	<item drawable="redream" />
+	<item drawable="redwood_cu" />
 	<item drawable="reebee" />
 	<item drawable="reev_lite" />
 	<item drawable="reev_pro" />
 	<item drawable="refind" />
+	<item drawable="rega" />
 	<item drawable="reicast" />
 	<item drawable="reigns" />
 	<item drawable="reigns_her_majesty" />
@@ -6422,6 +6436,7 @@
 	<item drawable="revanced_manager" />
 	<item drawable="reverb" />
 	<item drawable="reverso_context" />
+	<item drawable="revolt" />
 	<item drawable="revolut" />
 	<item drawable="revolut_junior" />
 	<item drawable="revolution_irc" />
@@ -6835,6 +6850,7 @@
 	<item drawable="smart_flasher" />
 	<item drawable="smart_launcher" />
 	<item drawable="smart_life" />
+	<item drawable="smart_micto" />
 	<item drawable="smart_news" />
 	<item drawable="smart_talk" />
 	<item drawable="smart_tools" />
@@ -7237,6 +7253,7 @@
 	<item drawable="temple_run_two" />
 	<item drawable="tennis_temple" />
 	<item drawable="tennis_tv" />
+	<item drawable="tenthapp" />
 	<item drawable="teo" />
 	<item drawable="terabox" />
 	<item drawable="termius" />
@@ -7448,6 +7465,7 @@
 	<item drawable="tripit" />
 	<item drawable="tripview" />
 	<item drawable="tripwolf" />
+	<item drawable="trivia_crack" />
 	<item drawable="trivia_you" />
 	<item drawable="trovo" />
 	<item drawable="truberbrook" />
@@ -7821,6 +7839,7 @@
 	<item drawable="waze_carpool" />
 	<item drawable="wazirx" />
 	<item drawable="we__chat" />
+	<item drawable="we_energies" />
 	<item drawable="we_heart_it" />
 	<item drawable="wealthica" />
 	<item drawable="wealthsimple" />
@@ -7933,6 +7952,7 @@
 	<item drawable="workdone" />
 	<item drawable="workflowy" />
 	<item drawable="workit" />
+	<item drawable="workjam" />
 	<item drawable="workout" />
 	<item drawable="world_of_goo" />
 	<item drawable="world_of_tanks" />
