--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10837,4 +10837,14 @@
 	<item component="ComponentInfo{com.etermax.preguntados.lite/com.etermax.preguntados.splash.presentation.SplashActivity}" drawable="trivia_crack" />
 	<item component="ComponentInfo{com.wecenergygroup.we/com.wec.weenergies.screens.landing.LandingActivity}" drawable="we_energies" />
 	<item component="ComponentInfo{com.workjam.workjam/com.workjam.workjam.features.auth.LoginUsernameActivity}" drawable="workjam" />
+	<item component="ComponentInfo{com.apnatime/com.apnatime.activities.splash.SplashActivity}" drawable="apna" />
+	<item component="ComponentInfo{com.barclaycard.germany/com.veripark.barclaycard.screen.main.activities.MainActivity}" drawable="barclays" />
+	<item component="ComponentInfo{it.conad.mobileapp/it.conad.app.view.launcher.LauncherActivity}" drawable="conad" />
+	<item component="ComponentInfo{com.eatthismuch/com.eatthismuch.activities.entry.EntryLoadingActivity}" drawable="eat_this_much" />
+	<item component="ComponentInfo{habittracker.todolist.tickit.daily.planner/habittracker.todolist.tickit.daily.planner.feature.main.SplashActivity}" drawable="habit_tracker" />
+	<item component="ComponentInfo{com.irakyatmob.bkrm/com.irakyatmob.bkrm.MainActivity}" drawable="irakyat" />
+	<item component="ComponentInfo{com.applemoncash/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="lemon_cash" />
+	<item component="ComponentInfo{net.trilliarden.mematic/net.trilliarden.mematic.mainmenu.MainMenuActivity}" drawable="mematic" />
+	<item component="ComponentInfo{it.radiorai/it.rainet.raiplaysound.ui.SplashScreenActivity}" drawable="raiplay_sound" />
+	<item component="ComponentInfo{com.evgeniysharafan.tabatatimer/com.evgeniysharafan.tabatatimer.ui.activity.SetupActivity}" drawable="tabata_timer" />
 </resources>
