--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -571,6 +571,16 @@
 	<item drawable="trivia_crack" />
 	<item drawable="we_energies" />
 	<item drawable="workjam" />
+	<item drawable="apna" />
+	<item drawable="barclays" />
+	<item drawable="conad" />
+	<item drawable="eat_this_much" />
+	<item drawable="habit_tracker" />
+	<item drawable="irakyat" />
+	<item drawable="lemon_cash" />
+	<item drawable="mematic" />
+	<item drawable="raiplay_sound" />
+	<item drawable="tabata_timer" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -2328,6 +2338,7 @@
 	<item drawable="apkpure" />
 	<item drawable="aplano" />
 	<item drawable="aplayer" />
+	<item drawable="apna" />
 	<item drawable="apo_discounter" />
 	<item drawable="app__hunt" />
 	<item drawable="app_cloner" />
@@ -2556,6 +2567,7 @@
 	<item drawable="bapp" />
 	<item drawable="bar_finder_hannover" />
 	<item drawable="barcelona" />
+	<item drawable="barclays" />
 	<item drawable="barcode_scanner" />
 	<item drawable="barcode_scanner_inventory" />
 	<item drawable="barcoo" />
@@ -3142,6 +3154,7 @@
 	<item drawable="communauto" />
 	<item drawable="compass_school_manager" />
 	<item drawable="computer_launcher_beta" />
+	<item drawable="conad" />
 	<item drawable="concepts" />
 	<item drawable="connectbot" />
 	<item drawable="connected2me" />
@@ -3557,6 +3570,7 @@
 	<item drawable="easyshare" />
 	<item drawable="easyway" />
 	<item drawable="eat__smarter" />
+	<item drawable="eat_this_much" />
 	<item drawable="eatclub" />
 	<item drawable="eatsure" />
 	<item drawable="ebay" />
@@ -4166,6 +4180,7 @@
 	<category title="H" />
 	<item drawable="h_and_m" />
 	<item drawable="habit_browser" />
+	<item drawable="habit_tracker" />
 	<item drawable="habithub" />
 	<item drawable="habitica" />
 	<item drawable="hackernews" />
@@ -4477,6 +4492,7 @@
 	<item drawable="iptv_extreme_pro" />
 	<item drawable="iptv_pro" />
 	<item drawable="iqiyi" />
+	<item drawable="irakyat" />
 	<item drawable="irctc_rail_connect" />
 	<item drawable="ireal_b" />
 	<item drawable="iriun_webcam" />
@@ -4752,6 +4768,7 @@
 	<item drawable="lego_super_mario" />
 	<item drawable="lemmur" />
 	<item drawable="lemon" />
+	<item drawable="lemon_cash" />
 	<item drawable="lemuroid" />
 	<item drawable="lenovo_file_browser" />
 	<item drawable="lenovo_tips" />
@@ -5058,6 +5075,7 @@
 	<item drawable="melon_playground" />
 	<item drawable="melonds" />
 	<item drawable="melvor_idle" />
+	<item drawable="mematic" />
 	<item drawable="meme_generator" />
 	<item drawable="memento" />
 	<item drawable="memetastic" />
@@ -6336,6 +6354,7 @@
 	<item drawable="rainbow_six_mobile" />
 	<item drawable="raindrop" />
 	<item drawable="raiplay" />
+	<item drawable="raiplay_sound" />
 	<item drawable="rakuten_denwa" />
 	<item drawable="rakuten_ebates" />
 	<item drawable="rakuten_ichiba" />
@@ -7170,6 +7189,7 @@
 	<item drawable="t_rowe_price" />
 	<item drawable="t3_arena" />
 	<item drawable="tab_pro" />
+	<item drawable="tabata_timer" />
 	<item drawable="tabbix" />
 	<item drawable="tabbix_pro" />
 	<item drawable="tabletop_tools" />
